# EtherWeb

./: Cargo.toml  README.md  Rocket.toml
database/: create_login.sql
src/: main.rs
src/auth/: account.rs  authorization.rs  db.rs  mod.rs  sanitization.rs
src/index/: mod.rs
templates/: index.html.tera
templates/css/: main.css
