[package]
name = "etherproject"
version = "0.1.0"
authors = ["Zor <zorftw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket-include-static-resources = "0.9.5"
chrono = "0.4"
postgres = { version = "0.15.1" }
r2d2 = "0.7.4"
r2d2_postgres = "0.13.0"
lazy_static = "1.4.0"
serde = {version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
htmlescape = "0.3.1"
unic-ucd = "0.6.0"

[dependencies.rocket_contrib]
default-features = false
features = ["tera_templates", "serve"]